--- a/.gitattributes
+++ b/.gitattributes
@@ -1,4 +1,4 @@
-*.c linguist-language=C++
-*.h linguist-language=C++
+*.c linguist-language=C
+*.h linguist-language=C
 *.cpp linguist-language=C++
 *.hpp linguist-language=C++
