--- a/Object Oriented Programming/HW3/makefile
+++ b/Object Oriented Programming/HW3/makefile
@@ -1,6 +1,5 @@
-main.exe: main.o
-	g++ -o main.exe main.o
-main.o: castle.o
-	g++ -c main.cpp
-castle.o: room.h
+all: castle.o main
+main:
+	g++ -o main main.cpp castle.o
+castle.o:
 	g++ -c castle.cpp
