--- a/Object Oriented Programming/HW6/makefile
+++ b/Object Oriented Programming/HW6/makefile
@@ -1,6 +1,2 @@
-main.exe: main.o
-	g++ -o main.exe main.o
-main.o: Vector.o
-	g++ -c main.cpp
-Vector.o: Vector.h
-	g++ -c Vector.cpp
+main:
+	g++ -o main main.cpp
